// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalContent - no overflow 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  overflow: auto;
  -webkit-flex: 8;
  -ms-flex: 8;
  flex: 8;
}

.c0.overflow {
  box-shadow: inset 0 -16px 16px -16px #DEE1E5, inset 0 16px 16px -16px #DEE1E5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
}

<div
  className="c0 undefined false"
>
  <div
    className="c1"
  >
    Stuff
  </div>
</div>
`;

exports[`ModalContent - no overflow 2`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  overflow: auto;
  -webkit-flex: 8;
  -ms-flex: 8;
  flex: 8;
}

.c0.overflow {
  box-shadow: inset 0 -16px 16px -16px #DEE1E5, inset 0 16px 16px -16px #DEE1E5;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
}

<div
  className="c0 undefined false"
>
  <div
    className="c1"
  >
    <div
      style={
        Object {
          "height": "4rem",
        }
      }
    >
      Stuff
    </div>
  </div>
</div>
`;
